--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<script>
-			window.open("levels/81522337/index.html", "_self")
+			window.open("levels/81522337", "_self")
 		</script>
 	</body>
 </html>
